samples/_failures_safe/1761669737_6efbfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4637b9a3.c: In function ‘main’:
./samples/SAFE/__tmp_4637b9a3.c:159:13: error: expected declaration or statement at end of input
  159 |             case 1: {
      |             ^~~~
./samples/SAFE/__tmp_4637b9a3.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4637b9a3.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4637b9a3.c:159:13: error: expected declaration or statement at end of input
